(tests
  (names arith let_bind simple_func conditional factorial global_names tuple definition variant value_match or_pattern when_match anon_function closure_currying comment equality let_and list_ string_ record range_pattern module operator unit_value bytes printf_ array_ stdlib_ bundler_simple bundler_dune file_io)
  (libraries mlml unix))
